Fix hero block title alignment

--- a/theme/extras/document.less
+++ b/theme/extras/document.less
@@ -402,3 +402,7 @@
 .view-editview .header-bg {
   display: none;
 }
+
+#page-document .block.hero .hero-body {
+  padding-top: 0px;
+}
